--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     
     <header>
-        <h1 id="my-text">Sito in costruzione</h1>
+        <div id="my-text">Sito in costruzione</div>
     </header>
     
     <script src="main.js"></script>
