--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="style.css">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+
+    <script src="js/ScrollSmoother.min.js"></script>
+    <script src="js/ScrollTrigger.min.js"></script>
+
     <script src="https://unpkg.com/split-type"></script>
 </head>
 <body>
@@ -17,6 +21,21 @@
         <div id="my-text">Sito in costruzione</div>
     </header>
     
+
+    <div id="smooth-wrapper">
+        <div id="smooth-content">
+          <header class="header">
+            <h1 class="title">ScrollSmoother</h1>
+            <button class="button">Jump to C</button>
+          </header>
+          <div class="box box-a" data-speed="clamp(0.5)">a</div>
+          <div class="box box-b" data-speed="clamp(0.8)">b</div>
+          <div class="box box-c" data-speed="1.5">c</div>
+          <div class="line"></div>
+        </div>
+      </div>
+
+
     <script src="main.js"></script>
 </body>
 </html>
