--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
     
 
-    <div id="smooth-wrapper">
+    <!-- <div id="smooth-wrapper">
         <div id="smooth-content">
           <header class="header">
             <h1 class="title">ScrollSmoother</h1>
@@ -33,7 +33,7 @@
           <div class="box box-c" data-speed="1.5">c</div>
           <div class="line"></div>
         </div>
-      </div>
+      </div> -->
 
 
     <script src="main.js"></script>
