Add maggiori info

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
     <header>
         <div id="my-text">Sito in costruzione</div>
     </header>
+
+    <div class="contatti">
+      Se vuoi maggiori informazioni puoi contattarci qui:
+
+      
+    </div>
     
     <script src="main.js"></script>
 </body>
