--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://unpkg.com/split-type"></script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200&family=Montserrat+Alternates:wght@100;900&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -18,10 +22,15 @@
     </header>
 
     <div class="contatti">
-      Se vuoi maggiori informazioni puoi contattarci qui:
-
-      
-    </div>
+        <div class="contatti-text">
+          Se vuoi maggiori informazioni puoi contattarci qui:
+        </div>
+        <a href="https://wa.me/393471475361">
+          <button id="wa-btn">
+            <img id="wa-btn-img" src="img/BottoneWA.svg" alt="">
+          </button>
+        </a>
+      </div>
     
     <script src="main.js"></script>
 </body>
