--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 
   <div id="smooth-wrapper">
     <div id="smooth-content">
+
+      
+
       <div id="sez-1" class="sezione">
         <h1>
           <div class="font1">
@@ -51,14 +54,21 @@
         </div>
       
         <div class="contatti">
-          <div class="contatti-text">
-            Contattaci su WhatsApp:
+          <div id="cont_cv">
+            <div class='top_cv'>
+
+              <div class="contatti-text">
+                Contattaci su WhatsApp:
+              </div>
+              <a href="https://wa.me/393471475361">
+                <button id="wa-btn">
+                  <img id="wa-btn-img" src="img/BottoneWA.svg" alt="">
+                </button>
+              </a>
+
+            </div>
+            <div class='not_top_cv middle'></div>
           </div>
-          <a href="https://wa.me/393471475361">
-            <button id="wa-btn">
-              <img id="wa-btn-img" src="img/BottoneWA.svg" alt="">
-            </button>
-          </a>
         </div>
 
       </div>
