--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200&family=Montserrat+Alternates:wght@100;900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Manrope:wght@200&family=Montserrat+Alternates:wght@100;900&display=swap"
+    rel="stylesheet">
   <!-- <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,900;1,6..96,900&display=swap" rel="stylesheet"> -->
 
   <link rel="stylesheet" href="style.css">
@@ -18,71 +20,14 @@
 
   <script src="js/ScrollSmoother.min.js"></script>
   <script src="js/ScrollTrigger.min.js"></script>
+  <script src="js/GSDevTools.min.js"></script>
 
   <script src="https://unpkg.com/split-type"></script>
 </head>
 
 <body>
 
-  <div id="smooth-wrapper">
-    <div id="smooth-content">
-
-      
-
-      <div id="sez-1" class="sezione">
-        <h1>
-          <div class="font1">
-            ViaNova
-          </div>
-          <div class="font2">
-            Studio
-          </div>
-        </h1>
-      </div>
-      <div id="sez-2" class="sezione">
-        <div class="font2">
-          Qualcosa scritto in grande sui materiali
-        </div>
-      </div>
-      <div id="sez-3" class="sezione">
-        <div class="font2">
-          Contatti
-        </div>
-
-        <div class="cutter-wrap">
-          <img id="cutter" src="img/cutter.png" alt="Taglierino">
-        </div>
-      
-        <div class="contatti">
-          <div id="cont_cv">
-            <div class='top_cv'>
-
-              <div class="contatti-text">
-                Contattaci su WhatsApp:
-              </div>
-              <a href="https://wa.me/393471475361">
-                <button id="wa-btn">
-                  <img id="wa-btn-img" src="img/BottoneWA.svg" alt="">
-                </button>
-              </a>
-
-            </div>
-            <div class='not_top_cv middle'></div>
-          </div>
-        </div>
-
-      </div>
-
-
-
-      <div class="box box-a2" data-speed="2"></div>
-      <div class="box box-a" data-speed="3"></div>
-      <div class="box-wrap">
-        <div class="box box-b" data-speed="1" data-lag=".5"></div>
-      </div>
-    </div>
-  </div>
-
+  
 
   <script src="main.js"></script>
 </body>
