--- a/index.html
+++ b/index.html
@@ -28,61 +28,79 @@
   <div id="smooth-wrapper">
     <div id="smooth-content">
 
-      <div class="bg"></div>
-      
-      <div id="sez-1" class="sezione" data-speed="1">
-        <h1>
-          <div class="font1">
-            ViaNova
-          </div>
-          <div class="font2">
-            Studio
-          </div>
-        </h1>
-      </div>
-      <div id="sez-2" class="sezione">
-        <div class="font2">
-          Qualcosa scritto in grande sui materiali
-        </div>
-      </div>
-      <div id="sez-3" class="sezione">
+      <div class="main-content">
 
-        <div class="font2">
-          Contatti
-        </div>
+        <div class="bg"></div>
 
-        <div id="contatti">
-          <div class='contatti-container'>
-
-            <div class="contatti-text">
-              Contattaci su WhatsApp:
+        <div id="sez-1" class="sezione" data-speed="1">
+          <h1>
+            <div class="font1">
+              ViaNova
             </div>
-            <a href="https://wa.me/393471475361">
-              <button id="wa-btn">
-                <img id="wa-btn-img" src="img/BottoneWA.svg" alt="">
-              </button>
-            </a>
+            <div class="font2">
+              Studio
+            </div>
+          </h1>
+        </div>
+        <div id="sez-2" class="sezione">
+          <section>
+            <div class="font2">
+              Disegno e produzione di packaging personalizzato
+            </div>
+          </section>
+          <section>
+            <div class="font2">
+              Accessori e decorazioni in carta, cartone, stoffa e tanti altri materiali
+            </div>
+          </section>
+          <section>
+            <div class="font2">
+              Qualcos'altro
+            </div>
+          </section>
+        </div>
+        <div id="sez-3" class="sezione">
 
+          <div class="font2">
+            Contatti
           </div>
-          <div class='contatti-cover'>
+
+          <div id="contatti">
+            <div class='contatti-container'>
+
+              <div class="contatti-text">
+                Contattaci su WhatsApp:
+              </div>
+              <a href="https://wa.me/393471475361">
+                <button id="wa-btn">
+                  <img id="wa-btn-img" src="img/BottoneWA.svg" alt="">
+                </button>
+              </a>
+
+            </div>
+            <div class='contatti-cover'>
+            </div>
           </div>
+
+          <div class="cutter-wrap">
+            <img id="cutter" src="img/cutter.png" alt="Taglierino">
+          </div>
+
         </div>
 
-        <div class="cutter-wrap">
-          <img id="cutter" src="img/cutter.png" alt="Taglierino">
-        </div>
 
+        <div class="box box-a2" data-speed="2"></div>
+        <div class="box box-a" data-speed="3"></div>
+        <div class="box-wrap">
+          <div class="box box-b" data-speed="1" data-lag=".5"></div>
+        </div>
       </div>
 
-
-      <div class="box box-a2" data-speed="2"></div>
-      <div class="box box-a" data-speed="3"></div>
-      <div class="box-wrap">
-        <div class="box box-b" data-speed="1" data-lag=".5"></div>
+      <div class="footer font3">
+        © ViaNovaStudio 2023
       </div>
     </div>
   </div>
-
 
   <script src="main.js"></script>
 </body>
