--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 
 <head>
   <meta charset="UTF-8">
@@ -90,7 +90,7 @@
 
 
         <div class="box box-a2" data-speed="2"></div>
-        <div class="box box-a" data-speed="3"></div>
+        <div class="box box-a" data-speed="2"></div>
         <div class="box-wrap">
           <div class="box box-b" data-speed="1" data-lag=".5"></div>
         </div>
