--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div id="sez-2" class="sezione">
           <section>
             <div class="font2">
-              Disegno e produzione di packaging personalizzato
+              Progettazione e produzione di packaging personalizzato
             </div>
           </section>
           <section>
@@ -55,7 +55,7 @@
           </section>
           <section>
             <div class="font2">
-              Qualcos'altro
+              Flessibilità e comunicazione diretta con i designer
             </div>
           </section>
         </div>
